// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="criteria-statement"
      >
        <div
          class="form-group form-group-autofit"
        >
          <div
            aria-hidden="true"
            class="form-group-item entity-name form-group-item-label form-group-item-shrink"
            data-aria-hidden="true"
          />
          <div
            aria-hidden="true"
            class="form-group-item display-value form-group-item-label form-group-item-shrink"
            data-aria-hidden="true"
          />
          <div
            class="form-group-item form-group-item-shrink"
          >
            <button
              aria-activedescendant="eq"
              aria-controls="clay-id-2"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="clay-id-2"
              class="form-control form-control-select form-control-select-secondary show"
              role="combobox"
              style=""
              tabindex="0"
              type="button"
            >
              is
            </button>
          </div>
          <div
            aria-hidden="true"
            class="form-group-item"
            data-aria-hidden="true"
          >
            <div
              class="input-group select-input-root"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="clay-id-3"
                  aria-labelledby="clay-autocomplete-label-1"
                  autocomplete="off"
                  autocorrect="off"
                  class="form-control input-group-inset input-group-inset-after"
                  data-testid="attribute-value-string-input"
                  id="clay-autocomplete-1"
                  role="combobox"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <div
                  aria-label="Loading"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="input-group-inset-item input-group-inset-item-after"
                  role="progressbar"
                >
                  <span
                    class="inline-item inline-item-middle"
                  >
                    <span
                      aria-hidden="true"
                      class="loading-animation loading-animation-sm"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="eq"
          aria-controls="clay-id-6"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-6"
          class="form-control form-control-select form-control-select-secondary conjunction-input show"
          data-testid="conjunction-input"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          on
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <div
          class="dropdown dropdown-range-key-root"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  autocomplete="off"
                  class="input-root form-control input-group-inset input-group-inset-after"
                  data-testid="date-input"
                  placeholder="YYYY-MM-DD"
                  readonly=""
                  type="text"
                  value="2021-01-01"
                />
                <div
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    aria-label="Choose a date"
                    class="button-root btn btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-calendar icon-root"
                      role="presentation"
                    >
                      <use
                        href="#calendar"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SessionInput should render with "ever" 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="criteria-statement"
      >
        <div
          class="form-group form-group-autofit"
        >
          <div
            aria-hidden="true"
            class="form-group-item entity-name form-group-item-label form-group-item-shrink"
            data-aria-hidden="true"
          />
          <div
            aria-hidden="true"
            class="form-group-item display-value form-group-item-label form-group-item-shrink"
            data-aria-hidden="true"
          />
          <div
            class="form-group-item form-group-item-shrink"
          >
            <button
              aria-activedescendant="eq"
              aria-controls="clay-id-8"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="clay-id-8"
              class="form-control form-control-select form-control-select-secondary show"
              role="combobox"
              style=""
              tabindex="0"
              type="button"
            >
              is
            </button>
          </div>
          <div
            aria-hidden="true"
            class="form-group-item"
            data-aria-hidden="true"
          >
            <div
              class="input-group select-input-root"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="clay-id-9"
                  aria-labelledby="clay-autocomplete-label-1"
                  autocomplete="off"
                  autocorrect="off"
                  class="form-control input-group-inset input-group-inset-after"
                  data-testid="attribute-value-string-input"
                  id="clay-autocomplete-1"
                  role="combobox"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <div
                  aria-label="Loading"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="input-group-inset-item input-group-inset-item-after"
                  role="progressbar"
                >
                  <span
                    class="inline-item inline-item-middle"
                  >
                    <span
                      aria-hidden="true"
                      class="loading-animation loading-animation-sm"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="ever"
          aria-controls="clay-id-12"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-12"
          class="form-control form-control-select form-control-select-secondary conjunction-input show"
          data-testid="conjunction-input"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          ever
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      />
    </div>
  </div>
</div>
`;
